--- a/1.html
+++ b/1.html
@@ -1,21 +1,23 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - HTML</title>
+  <title>Hyuking's WEB1 - HTML</title>
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">Hyuking's WEBpage</a></h1>
 <ol>
   <li><a href="1.html">HTML</a></li>
   <li><a href="2.html">CSS</a></li>
   <li><a href="3.html">JavaScript</a></li>
 </ol><br>
 <h2>HTML</h2>
-hello web
-<p>유나리는 90년 4월14일 생이며 <strong>에이형</strong>입니다 지금은 <u>한글</u>로 <strong>웹코딩</strong>을 연습중입니다.</P>
-"자동 줄바꿈을 하고 싶습니다.
-메뉴에서 preference -> editor -> Soft Wrap 항목을 체크해주세요. 참고" 가 있습니다.<a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 speicification">링크해보겠습니다.</a>
+hello web~:)
+<p>유나리는 90년 4월14일 생이며 <strong>에이형</strong>입니다.<br>유나리가 싫어하는 나의 친구를 링크해 보겠습니다.<br>
+<a href="https://www.instagram.com/nice_choi_86/" target="_blank" title="ㅋㅋㅋㅋ">눌러보세요 </a><br><br><br>
+  지금은 <u>한글</u>로 <strong>웹코딩</strong>을 연습중입니다.</P>
+자동 줄바꿈을 하고 싶습니다.<br>
+메뉴에서 preference -> editor -> Soft Wrap 항목을 체크해주세요. 참고" 가 있습니다.<br><a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 speicification">HTML5 정의에 대해 링크해보겠습니다.</a>
 <br><br><br><br>
 <h1>This is heading 1</h1>
 <h2>This is heading 2</h2>
