--- a/2.html
+++ b/2.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - CSS</title>
+  <title>Hyuking's WEB1 - CSS</title>
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">Hyuking's WEBpage</a></h1>
 <ol>
   <li><a href="1.html">HTML</a></li>
   <li><a href="2.html">CSS</a></li>
@@ -16,13 +16,5 @@ hello web
 <p>이곳은 CSS페이지 입니다.</P>
 <a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 speicification">링크해보겠습니다.</a>
 <br><br><br><br>
-<h1>This is heading 1</h1>
-<h2>This is heading 2</h2>
-<h3>This is heading 3</h3>
-<h4>This is heading 4</h4>
-<h5>This is heading 5</h5>
-<h6>This is heading 6</h6>
-<p style="margin-top:45px;"><strong>"이미지를 넣어볼까요."</strong>
-  <img src="coding.jpg" width="100%">
-ol tag & ul tag= ordered list & unordered list</body>
+</body>
 </html>
