--- a/index.html
+++ b/index.html
@@ -1,29 +1,21 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - Welcome</title>
+  <title>Hyuking's WEB1 - Welcome</title>
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">Hyuking's WEBpage</a></h1>
 <ol>
   <li><a href="1.html">HTML</a></li>
   <li><a href="2.html">CSS</a></li>
   <li><a href="3.html">JavaScript</a></li>
 </ol><br>
-<h2>Home</h2>
-hello web
-<p>메인페이지입니다.</P>
-"자동 줄바꿈을 하고 싶습니다.
-메뉴에서 preference -> editor -> Soft Wrap 항목을 체크해주세요. 참고" 가 있습니다.<a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 speicification">링크해보겠습니다.</a>
-<br><br><br><br>
-<h1>This is heading 1</h1>
-<h2>This is heading 2</h2>
-<h3>This is heading 3</h3>
-<h4>This is heading 4</h4>
-<h5>This is heading 5</h5>
-<h6>This is heading 6</h6>
-<p style="margin-top:45px;"><strong>"이미지를 넣어볼까요."</strong>
-  <img src="coding.jpg" width="100%">
-ol tag & ul tag= ordered list & unordered list</body>
+<h2>'Home Page'</h2>
+hello web :)
+<p>혀킹웹의 메인페이지입니다.</P>
+찾아와 주셔서 감사합니다.<br>혀킹의 첫번째 웹페이지입니다. 나날히 발전하는 모습을 보여드릴께요!<br><a href="https://hyuking.github.io/web1/index.html" target="_blank" title="Hyuking's webpage">https://hyuking.github.io/web1/index.html</a> <<이 주소로 오시면 항상 접속가능하십니다!!
+<br><br>""갬성적으로 감사합니다!!""<br><br>
+
+</body>
 </html>
